--- a/README.org
+++ b/README.org
@@ -5,7 +5,7 @@ alternative to contemporary, imperative shells.
 
 FunTask draws on ideas from functional programming, to provide a cleaner
 programming experience, while retaining a natural command-line interface,
-similar to established, imperative shells.
+similar to established shells.
 
 FunTask revolves around the notion of an operating system "task". Classically,
 a task is either a thread or a process, depending on the extent to which the
